# ADS_SD-Chat

./: README.md  pyproject.toml
src/: main.py
src/controller/: client.py  cliente.py  servidor.py
src/model/: model.py
src/view/: server_config.py  user_name.py
