[project]
name = "ads-sd-chat"
version = "0.1.0"
description = "Aplicativo de chat com Flet e sockets em Python"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Jhon Silva", email = "jhonlene12@gmail.com" },
    { name = "Ayalon Dutra", email = "exemple@email.com" },
    { name = "Hiago Ribeiro", email = "exemple@email.com" },
    { name = "Danilo Borges", email = "exemple@email.com" },
    { name = "Matheus Moreira", email = "exemple@email.com" }
]
dependencies = [
    "flet==0.27.6"
]

[tool.flet]
org = "com.ads"
product = "ads-sd-chat"
company = "ADS IFTO"
copyright = "Copyright (C) 2025 by Equipe ADS IFTO"

[tool.flet.app]
path = "main.py"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.6"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = { extras = ["all"], version = "0.27.6" }
